--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,7 @@
    ],
    "source": [
     "art_vandelay = \"art vandelay\" # 'Art Vandelay'\n",
-    "art_vandelay 'art_vandelay'.capitalize()"
+    "art_vandelay.capitalize()"
    ]
   },
   {
