--- a/index.ipynb
+++ b/index.ipynb
@@ -85,23 +85,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Art vandelay'"
+       "'Art Vandelay'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "art_vandelay = \"art vandelay\" # 'Art Vandelay'\n",
-    "art_vandelay.()"
+    "art_vandelay.title()"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "outputs": [],
    "source": [
     "ceo = \"Ceo\" # 'CEO'\n",
-    "ceo"
+    "ceo.up"
    ]
   },
   {
