--- a/index.ipynb
+++ b/index.ipynb
@@ -113,14 +113,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CEO'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ceo = \"Ceo\" # 'CEO'\n",
-    "ceo.up"
+    "ceo.upper()"
    ]
   },
   {
